{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 229,
  "lineage": "64361f95-fb41-b795-d26c-4ab0de2c5a06",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkInterfaces/demo-az-jenkins319",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/publicIPAddresses/demo-az-jenkins-ip",
                "subnet_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/virtualNetworks/DemoRG1-vnet/subnets/default"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DB-50-C1",
            "name": "demo-az-jenkins319",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "DemoRG1",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Compute/virtualMachines/demo-az-jenkins"
          },
          "dependencies": [
            "azurerm_public_ip.res-21",
            "azurerm_resource_group.DemoRG1",
            "azurerm_subnet.res-23",
            "azurerm_virtual_network.res-22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkInterfaces/demo-az-dev976",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/publicIPAddresses/demo-az-dev-ip",
                "subnet_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/virtualNetworks/DemoRG1-vnet/subnets/default"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-1E-F1-19",
            "name": "demo-az-dev976",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "DemoRG1",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Compute/virtualMachines/demo-az-dev"
          },
          "dependencies": [
            "azurerm_public_ip.res-20",
            "azurerm_resource_group.DemoRG1",
            "azurerm_subnet.res-23",
            "azurerm_virtual_network.res-22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkInterfaces/demo-az-dev976|/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-dev-nsg",
            "network_interface_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkInterfaces/demo-az-dev976",
            "network_security_group_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-dev-nsg",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_network_interface.res-9",
            "azurerm_network_security_group.res-13",
            "azurerm_public_ip.res-20",
            "azurerm_resource_group.DemoRG1",
            "azurerm_subnet.res-23",
            "azurerm_virtual_network.res-22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkInterfaces/demo-az-jenkins319|/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-jenkins-nsg",
            "network_interface_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkInterfaces/demo-az-jenkins319",
            "network_security_group_id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-jenkins-nsg",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_network_interface.res-11",
            "azurerm_network_security_group.res-17",
            "azurerm_public_ip.res-21",
            "azurerm_resource_group.DemoRG1",
            "azurerm_subnet.res-23",
            "azurerm_virtual_network.res-22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-dev-nsg",
            "location": "eastus",
            "name": "demo-az-dev-nsg",
            "resource_group_name": "DemoRG1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom3000Inbound",
                "priority": 310,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000-5001",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom5000-5001Inbound",
                "priority": 320,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-17",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-jenkins-nsg",
            "location": "eastus",
            "name": "demo-az-jenkins-nsg",
            "resource_group_name": "DemoRG1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom8080Inbound",
                "priority": 310,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-14",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3000",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-dev-nsg/securityRules/AllowAnyCustom3000Inbound",
            "name": "AllowAnyCustom3000Inbound",
            "network_security_group_name": "demo-az-dev-nsg",
            "priority": 310,
            "protocol": "*",
            "resource_group_name": "DemoRG1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-13",
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5000-5001",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-dev-nsg/securityRules/AllowAnyCustom5000-5001Inbound",
            "name": "AllowAnyCustom5000-5001Inbound",
            "network_security_group_name": "demo-az-dev-nsg",
            "priority": 320,
            "protocol": "*",
            "resource_group_name": "DemoRG1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-13",
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-16",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-dev-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "demo-az-dev-nsg",
            "priority": 300,
            "protocol": "TCP",
            "resource_group_name": "DemoRG1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-13",
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-jenkins-nsg/securityRules/AllowAnyCustom8080Inbound",
            "name": "AllowAnyCustom8080Inbound",
            "network_security_group_name": "demo-az-jenkins-nsg",
            "priority": 310,
            "protocol": "*",
            "resource_group_name": "DemoRG1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-17",
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-19",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/networkSecurityGroups/demo-az-jenkins-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "demo-az-jenkins-nsg",
            "priority": 300,
            "protocol": "TCP",
            "resource_group_name": "DemoRG1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-17",
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "azure-dev",
            "fqdn": "azure-dev.eastus.cloudapp.azure.com",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/publicIPAddresses/demo-az-dev-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.192.75",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "demo-az-dev-ip",
            "resource_group_name": "DemoRG1",
            "sku": "Standard",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "azure-jenkins",
            "fqdn": "azure-jenkins.eastus.cloudapp.azure.com",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/publicIPAddresses/demo-az-jenkins-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.246.222.141",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "demo-az-jenkins-ip",
            "resource_group_name": "DemoRG1",
            "sku": "Standard",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/virtualNetworks/DemoRG1-vnet/subnets/default",
            "name": "default",
            "resource_group_name": "DemoRG1",
            "timeouts": {
            },
            "virtual_network_name": "DemoRG1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.DemoRG1",
            "azurerm_virtual_network.res-22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "18e977d1-fed9-49f8-9f1b-b63c010d712a",
            "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/virtualNetworks/DemoRG1-vnet",
            "location": "eastus",
            "name": "DemoRG1-vnet",
            "resource_group_name": "DemoRG1",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/8f0ccddf-4f60-4029-8910-20a665e4c740/resourceGroups/DemoRG1/providers/Microsoft.Network/virtualNetworks/DemoRG1-vnet/subnets/default",
                "name": "default"
              }
            ],
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.DemoRG1"
          ]
        }
      ]
    }
  ]
}